--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.0.0-beta.42",
-    "meteor-node-stubs": "^0.3.2"
+    "meteor-node-stubs": "^0.3.2",
+    "web3": "^1.0.0-beta.33",
+    "web3-net": "^1.0.0-beta.33"
   }
 }
